--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "howsmywifi",
-  "version": "1.0.0",
-  "description":
-    "Measure (repeatedly) your broadband speed using Fast.com in a headless browser",
+  "version": "1.1.0",
+  "description": "Measure (repeatedly) your broadband speed using Fast.com in a headless browser",
   "main": "index.js",
   "bin": {
     "howsmywifi": "./index.js"
